@@ -401,7 +401,7 @@ index|]
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|462.6174876948475D
+literal|462.1004647449412
 argument_list|,
 operator|(
 name|Double
@@ -430,7 +430,7 @@ index|]
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|1056.163041670945D
+literal|1054.9826700985088
 argument_list|,
 operator|(
 name|Double
@@ -459,7 +459,7 @@ index|]
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|5291.798081190281D
+literal|5285.883948830351
 argument_list|,
 operator|(
 name|Double
@@ -656,7 +656,7 @@ index|]
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|462.6174876948475D
+literal|462.1004647449412D
 argument_list|,
 operator|(
 name|Double
@@ -685,7 +685,7 @@ index|]
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|1056.163041670945D
+literal|1054.9826700985088
 argument_list|,
 operator|(
 name|Double
