@@ -1863,159 +1863,6 @@ name|c
 argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// Yet another test case from BKD
-name|c
-operator|=
-name|GeoCircleFactory
-operator|.
-name|makeGeoCircle
-argument_list|(
-name|PlanetModel
-operator|.
-name|WGS84
-argument_list|,
-literal|0.006229478708446979
-argument_list|,
-literal|0.005570196723795424
-argument_list|,
-literal|3.840276763694387E
-operator|-
-literal|5
-argument_list|)
-expr_stmt|;
-name|xyzb
-operator|=
-operator|new
-name|XYZBounds
-argument_list|()
-expr_stmt|;
-name|c
-operator|.
-name|getBounds
-argument_list|(
-name|xyzb
-argument_list|)
-expr_stmt|;
-name|area
-operator|=
-name|GeoAreaFactory
-operator|.
-name|makeGeoArea
-argument_list|(
-name|PlanetModel
-operator|.
-name|WGS84
-argument_list|,
-name|xyzb
-operator|.
-name|getMinimumX
-argument_list|()
-argument_list|,
-name|xyzb
-operator|.
-name|getMaximumX
-argument_list|()
-argument_list|,
-name|xyzb
-operator|.
-name|getMinimumY
-argument_list|()
-argument_list|,
-name|xyzb
-operator|.
-name|getMaximumY
-argument_list|()
-argument_list|,
-name|xyzb
-operator|.
-name|getMinimumZ
-argument_list|()
-argument_list|,
-name|xyzb
-operator|.
-name|getMaximumZ
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|p1
-operator|=
-operator|new
-name|GeoPoint
-argument_list|(
-name|PlanetModel
-operator|.
-name|WGS84
-argument_list|,
-literal|0.006224927111830945
-argument_list|,
-literal|0.005597367237251763
-argument_list|)
-expr_stmt|;
-name|p2
-operator|=
-operator|new
-name|GeoPoint
-argument_list|(
-literal|1.0010836083810235
-argument_list|,
-literal|0.005603490759433942
-argument_list|,
-literal|0.006231850560862502
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|PlanetModel
-operator|.
-name|WGS84
-operator|.
-name|pointOnSurface
-argument_list|(
-name|p1
-argument_list|)
-argument_list|)
-expr_stmt|;
-comment|//assertTrue(PlanetModel.WGS84.pointOnSurface(p2));
-name|assertTrue
-argument_list|(
-name|c
-operator|.
-name|isWithin
-argument_list|(
-name|p1
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|c
-operator|.
-name|isWithin
-argument_list|(
-name|p2
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|area
-operator|.
-name|isWithin
-argument_list|(
-name|p1
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|area
-operator|.
-name|isWithin
-argument_list|(
-name|p2
-argument_list|)
-argument_list|)
-expr_stmt|;
 comment|// Another test case from BKD
 name|c
 operator|=
